# oran_sdp

m1_client1/: applyfirewallrules.sh  attack.py  ca.crt  ca.key  ca.p12  client.p12  client.py  generate_ipsec_certs.sh  similar.py  spa_client.c  try.csv  tryy.pcapng
m1_client1/Downloads/: ih_onboard_10.9.70.136.crt  ih_onboard_10.9.70.136.key
m1_client1/ipsec_certs/: ca.crt  client.key  client.p12  ipsec-client.sh  server.crt  server.key
m1_client1/pcaps/: proof_that_it_works_really_with_firewall.pcapng  taken_demo_of_this.pcapng  with_firewall.pcapng  worked_2.pcapng  works.pcapng  xapp_run1.pcapng  xapp_run2_0.1.pcapng
m1_client1/phase2/: Makefile  client_onboard.conf  getcontime.sh  ih.c  ih.c_connection time  ih_app  spa_common.c  spa_common.h
m1_flexric/: applyrules.sh  controller.c  controller_policy.conf  flush_nftables.sh  flush_nftables_2.sh  graph.py  monitor.py  monitor.sh  setup_nftables_rules.sh  spa_client.conf  spa_common.h_backup  temporary_allow_server.sh
m1_flexric/flexric/examples/xApp/c/sdp/: CMakeLists.txt  controller_ca.crt  handle_connections_controller.c
m1_oran2/: full_scan.txt
m1_server/: Network Persistent State  allow_sctp_temp.sh  applyrules.sh  ca.crt  ca.p12  hmac_key.b64  machineid  refconf.txt  server.crt  server.key  server.p12  server.py  spa_client.c  spa_common.c  spa_common.h  spa_server.c  thesis_capture.pcapng
m2_flexric-oai/: 1st.pcapng  attack.py  commands_for_deployment.txt  monitor.py  rc  ric_metrics.csv
m2_flexric2/: e2ap capture.pcapng  rebuild.sh
m2_sdp/: client.py  flood.py  menu.py
(+188 files in other folders)
